--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,12 @@
             </intent-filter>
         </activity>
         
+        <activity
+            android:name=".SubmitComplaintActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize"
+            android:parentActivityName=".MainActivity" />
+        
     </application>
 
 </manifest>
