Add Firebase integration and implement complaint analysis feature
- Added Firebase dependencies for authentication and Firestore database.
- Introduced Firestore security rules to manage user access and complaint submissions.
- Implemented GeminiService for AI-driven complaint analysis, categorizing and determining urgency.
- Updated LoginActivity and SignUpActivity to handle Firebase authentication with user feedback.
- Enhanced SubmitComplaintActivity to utilize AI analysis for complaint submissions.
- Created data models for Complaint and User, along with repositories for managing data interactions.
- Updated UI components to reflect new features and ensure a cohesive user experience.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,10 @@ appcompat = "1.7.1"
 material = "1.13.0"
 activity = "1.9.3"
 constraintlayout = "2.2.0"
+firebaseBom = "33.7.0"
+firebaseAuth = "23.0.0"
+firestore = "25.0.0"
+gemini = "0.7.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -19,6 +23,10 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebaseBom" }
+firebase-auth = { group = "com.google.firebase", name = "firebase-auth-ktx" }
+firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore-ktx" }
+google-generativeai = { group = "com.google.ai.client.generativeai", name = "generativeai", version.ref = "gemini" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
